# libclangjs

./: .gitignore  README.md  build.sh  gha-creds-f317bb5364bfdbea.json  package.json  pnpm-lock.yaml  preRelease.sh  turbo.json
.changeset/: bright-vans-double.md  chatty-rats-travel.md  chatty-readers-beg.md  chilly-kiwis-sing.md  clean-beds-breathe.md  config.json  cool-cups-itch.md  cuddly-donuts-admire.md  dry-timers-marry.md  dull-seals-own.md  eight-numbers-turn.md  flat-apricots-sort.md  gentle-hornets-eat.md  giant-wasps-exercise.md  gorgeous-houses-clean.md  great-tomatoes-breathe.md  grumpy-planets-eat.md  hip-hats-swim.md  honest-impalas-try.md  hungry-ducks-obey.md  long-tips-kick.md  loud-singers-report.md  modern-tables-guess.md  nine-actors-warn.md  nine-ties-fold.md  olive-waves-leave.md  orange-crabs-rule.md  poor-pumpkins-decide.md  proud-numbers-relax.md  rich-garlics-pump.md  selfish-pants-guess.md  serious-roses-peel.md  seven-readers-yawn.md  silver-papayas-wave.md  small-pugs-sing.md  smart-starfishes-chew.md  smooth-roses-buy.md  tame-beers-scream.md  thick-seahorses-teach.md  thin-cats-call.md  (+6 more)
.github/: FUNDING.yml
.github/workflows/: build.yml
.husky/: pre-push
tests/test-cmake/: CMakeLists.txt  main.cpp  package.json  test.ts
tests/test-node/: .gitignore  index.test.ts  package.json  sum.test.ts  tsconfig.json
tests/test-node/testSrc/: header.hpp  main.cpp
tests/test-node/testSrc/dir/: anotherHeader.hpp
